--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.1.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
